fixes: aligned form container items to center

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ header {
 #form-container {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     min-height: 70vh;
     padding: 20px;
     margin-top: 120px;
